--- a/libnsbmp.pc.in
+++ b/libnsbmp.pc.in
@@ -6,5 +6,5 @@ includedir=${prefix}/include
 Name: libnsbmp
 Description: Provides bmp loading and conversion
 Version: VERSION
-Libs: -L${libdir} -lnsbmpMAJOR
-Cflags: -I${includedir}/libnsbmpMAJOR
+Libs: -L${libdir} -lnsbmp
+Cflags: -I${includedir}/
